2008-01-28  Vincent Untz  <vuntz@gnome.org>

	* panel-logout.c: (panel_logout_timeout): if the name of the user is
	"Unknown", then display the login name.
	Fix bug #509129, based on patch by Martin Schoen
	<martin_schoen@gmx.de>

==================== 2.21.5 ====================

==================== 2.20.1 ====================

==================== 2.20.0.1 ====================

2007-09-18  Vincent Untz  <vuntz@gnome.org>

	* panel-icon-names.h: revert the previous commit: it breaks some icon
	themes. We'll give some time to the authors to fix their themes, and
	use the new icon name in 2.22.

==================== 2.20.0 ====================

2007-09-17  Vincent Untz  <vuntz@gnome.org>

	* panel-icon-names.h: use new icon name for logout.
	Patch by Luca Ferretti <elle.uca@libero.it>
	Fix bug #472254

2007-09-11  Ray Strode  <rstrode@redhat.com>

	* panel-toplevel.c: (panel_toplevel_attach_to_widget): 
	fix typo in previous commit.

2007-09-11  Ray Strode  <rstrode@redhat.com>

	* panel-toplevel.c: (panel_toplevel_attach_to_widget): 
	Show drawers on same monitor as the panels they're 
	attached to (bug 300883).

==================== 2.19.92 ====================

2007-08-29  Jaap Haitsma  <jaap@haitsma.org>

	* panel-icon-names.h: Use system-search i.s.o. removed gnome-searchtool
	icon. Fixes bug #470194 

2007-08-27  Frederic Peters  <fpeters@0d.be>

	reviewed by: Vincent Untz

	* menu.c: (create_submenu_entry): do not show tooltips for application
	categories in menu. (bug 463919)

2007-08-27  Frederic Peters  <fpeters@0d.be>

	reviewed by: Vincent Untz

	* panel-logout.c: (panel_logout_timeout): fallback to user name when
	real name is empty. (bug 456925)

==================== 2.19.6 ====================

2007-08-01  Ray Strode  <rstrode@redhat.com>

	* panel-power-manager.c: (panel_power_manager_on_name_owner_change),
	(panel_power_manager_ensure_gpm_connection),
	(panel_power_manager_can_suspend),
	(panel_power_manager_can_hibernate): 