@@ -1,3 +1,8 @@
+2008-01-28  Christian Persch  <chpe@gnome.org>
+
+	* xstuff.c: (get_typed_property_data): 
+	Use G_STRFUNC instead of the deprecated G_GNUC_FUNCTION.
+
 2008-01-28  Vincent Untz  <vuntz@gnome.org>
 
 	* panel-logout.c: (panel_logout_timeout): if the name of the user is
